STM32CubeIDE/.metadata/.plugins/org.eclipse.cdt.ui/120_QSPI_MX25L51245G.build.log
18:29:47 **** Incremental Build of configuration Debug for project 120_QSPI_MX25L51245G ****
make all 
arm-none-eabi-gcc "../src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DSTM32 -DSTM32F7 -DSTM32F769NIHx -DSTM32F769I_DISC1 -DDEBUG -DSTM32F769xx -DUSE_HAL_DRIVER -c -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/ampire480272" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/n25q512a" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/s5k5cag" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/mfxstm32l152" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/CMSIS/device" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/n25q128a" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/ts3510" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/st7735" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/rk043fn48h" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/HAL_Driver/Inc/Legacy" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/ov9655" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/otm8009a" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/Common" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/HAL_Driver/Inc" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/stmpe811" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/wm8994" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Fonts" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/ft5336" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/inc" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/ft6x06" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/exc7200" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/st7789h2" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Log" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/adv7533" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/ampire640480" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/STM32F769I-Discovery" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/CMSIS/core" -I"D:/__GitHub/discoF769/STM32CubeIDE/120_QSPI_MX25L51245G/Utilities/Components/mx25l512" -O0 -ffunction-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"src/main.d" -MT"src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "src/main.o"
../src/main.c: In function 'QSPI_init':
../src/main.c:60:11: warning: implicit declaration of function 'QSPI_CLK_ENABLE'; did you mean 'DSI_AR_ENABLE'? [-Wimplicit-function-declaration]
   60 |           QSPI_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~
      |           DSI_AR_ENABLE
../src/main.c:61:11: warning: implicit declaration of function 'QSPI_FORCE_RESET'; did you mean 'DSI_SOFT_RESET'? [-Wimplicit-function-declaration]
   61 |           QSPI_FORCE_RESET();
      |           ^~~~~~~~~~~~~~~~
      |           DSI_SOFT_RESET
../src/main.c:62:11: warning: implicit declaration of function 'QSPI_RELEASE_RESET' [-Wimplicit-function-declaration]
   62 |           QSPI_RELEASE_RESET();
      |           ^~~~~~~~~~~~~~~~~~
../src/main.c:63:11: warning: implicit declaration of function 'QSPI_CS_GPIO_CLK_ENABLE' [-Wimplicit-function-declaration]
   63 |           QSPI_CS_GPIO_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:64:11: warning: implicit declaration of function 'QSPI_CLK_GPIO_CLK_ENABLE' [-Wimplicit-function-declaration]
   64 |           QSPI_CLK_GPIO_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:65:11: warning: implicit declaration of function 'QSPI_D0_GPIO_CLK_ENABLE' [-Wimplicit-function-declaration]
   65 |           QSPI_D0_GPIO_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:66:11: warning: implicit declaration of function 'QSPI_D1_GPIO_CLK_ENABLE' [-Wimplicit-function-declaration]
   66 |           QSPI_D1_GPIO_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:67:11: warning: implicit declaration of function 'QSPI_D2_GPIO_CLK_ENABLE' [-Wimplicit-function-declaration]
   67 |           QSPI_D2_GPIO_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:68:11: warning: implicit declaration of function 'QSPI_D3_GPIO_CLK_ENABLE' [-Wimplicit-function-declaration]
   68 |           QSPI_D3_GPIO_CLK_ENABLE();
      |           ^~~~~~~~~~~~~~~~~~~~~~~
../src/main.c:72:11: error: 'gpio_init_structure' undeclared (first use in this function)
   72 |           gpio_init_structure.Pin       = QSPI_CS_PIN;
      |           ^~~~~~~~~~~~~~~~~~~
../src/main.c:72:11: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c:72:43: error: 'QSPI_CS_PIN' undeclared (first use in this function)
   72 |           gpio_init_structure.Pin       = QSPI_CS_PIN;
      |                                           ^~~~~~~~~~~
../src/main.c:73:43: error: 'QSPI_CS_PIN_AF' undeclared (first use in this function)
   73 |           gpio_init_structure.Alternate = QSPI_CS_PIN_AF;
      |                                           ^~~~~~~~~~~~~~
../src/main.c:77:25: error: 'QSPI_CS_GPIO_PORT' undeclared (first use in this function)
   77 |           HAL_GPIO_Init(QSPI_CS_GPIO_PORT, &gpio_init_structure);
      |                         ^~~~~~~~~~~~~~~~~
../src/main.c:79:43: error: 'QSPI_CLK_PIN' undeclared (first use in this function)
   79 |           gpio_init_structure.Pin       = QSPI_CLK_PIN;
      |                                           ^~~~~~~~~~~~
../src/main.c:80:43: error: 'QSPI_CLK_PIN_AF' undeclared (first use in this function)
   80 |           gpio_init_structure.Alternate = QSPI_CLK_PIN_AF;
      |                                           ^~~~~~~~~~~~~~~
../src/main.c:82:25: error: 'QSPI_CLK_GPIO_PORT' undeclared (first use in this function)
   82 |           HAL_GPIO_Init(QSPI_CLK_GPIO_PORT, &gpio_init_structure);
      |                         ^~~~~~~~~~~~~~~~~~
../src/main.c:84:43: error: 'QSPI_D0_PIN' undeclared (first use in this function)
   84 |           gpio_init_structure.Pin       = QSPI_D0_PIN;
      |                                           ^~~~~~~~~~~
../src/main.c:85:43: error: 'QSPI_D0_PIN_AF' undeclared (first use in this function)
   85 |           gpio_init_structure.Alternate = QSPI_D0_PIN_AF;
      |                                           ^~~~~~~~~~~~~~
../src/main.c:86:25: error: 'QSPI_D0_GPIO_PORT' undeclared (first use in this function)
   86 |           HAL_GPIO_Init(QSPI_D0_GPIO_PORT, &gpio_init_structure);
      |                         ^~~~~~~~~~~~~~~~~
../src/main.c:88:43: error: 'QSPI_D1_PIN' undeclared (first use in this function)
   88 |           gpio_init_structure.Pin       = QSPI_D1_PIN;
      |                                           ^~~~~~~~~~~
../src/main.c:89:43: error: 'QSPI_D1_PIN_AF' undeclared (first use in this function)
   89 |           gpio_init_structure.Alternate = QSPI_D1_PIN_AF;
      |                                           ^~~~~~~~~~~~~~
../src/main.c:90:25: error: 'QSPI_D1_GPIO_PORT' undeclared (first use in this function)
   90 |           HAL_GPIO_Init(QSPI_D1_GPIO_PORT, &gpio_init_structure);
      |                         ^~~~~~~~~~~~~~~~~
../src/main.c:92:43: error: 'QSPI_D2_PIN' undeclared (first use in this function)
   92 |           gpio_init_structure.Pin       = QSPI_D2_PIN;
      |                                           ^~~~~~~~~~~
../src/main.c:93:43: error: 'QSPI_D2_PIN_AF' undeclared (first use in this function)
   93 |           gpio_init_structure.Alternate = QSPI_D2_PIN_AF;
      |                                           ^~~~~~~~~~~~~~
../src/main.c:94:25: error: 'QSPI_D2_GPIO_PORT' undeclared (first use in this function)
   94 |           HAL_GPIO_Init(QSPI_D2_GPIO_PORT, &gpio_init_structure);
      |                         ^~~~~~~~~~~~~~~~~
../src/main.c:96:43: error: 'QSPI_D3_PIN' undeclared (first use in this function)
   96 |           gpio_init_structure.Pin       = QSPI_D3_PIN;
      |                                           ^~~~~~~~~~~
../src/main.c:97:43: error: 'QSPI_D3_PIN_AF' undeclared (first use in this function)
   97 |           gpio_init_structure.Alternate = QSPI_D3_PIN_AF;
      |                                           ^~~~~~~~~~~~~~
../src/main.c:98:25: error: 'QSPI_D3_GPIO_PORT' undeclared (first use in this function)
   98 |           HAL_GPIO_Init(QSPI_D3_GPIO_PORT, &gpio_init_structure);
      |                         ^~~~~~~~~~~~~~~~~
At top level:
../src/main.c:102:6: warning: 'QSPI_MemoryMappedMode' defined but not used [-Wunused-function]
  102 | void QSPI_MemoryMappedMode(void) {
      |      ^~~~~~~~~~~~~~~~~~~~~
../src/main.c:59:6: warning: 'QSPI_init' defined but not used [-Wunused-function]
   59 | void QSPI_init(void) {
      |      ^~~~~~~~~
make: *** [src/subdir.mk:28: src/main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

18:29:49 Build Failed. 20 errors, 11 warnings. (took 1s.378ms)

